<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:layout_width="wrap_content"
        android:paddingTop="20dp"
        android:layout_height="70dp">

        <ImageView
            android:contentDescription="@string/application_icon"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_kangaroo"/>

        <TextView
            android:id="@+id/appNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:gravity="center"
            android:textStyle="bold"
            android:drawablePadding="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/drawer_student_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_student_email" />

</LinearLayout>
