<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/application_icon"
            android:src="@drawable/ic_kangaroo"/>

        <TextView
            android:id="@+id/appNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/mailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_student_email"/>

</LinearLayout>
